--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.34MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.22MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 波兰-573.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇫🇷 法国-1.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇫🇷 法国-2.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
+  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-488.6KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 波兰-663.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 波兰-573.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-488.6KB/s(Youtube:不良林)
+      - 波兰-663.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 波兰-573.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-488.6KB/s(Youtube:不良林)
+      - 波兰-663.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 波兰-573.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-488.6KB/s(Youtube:不良林)
+      - 波兰-663.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 波兰-573.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-488.6KB/s(Youtube:不良林)
+      - 波兰-663.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 波兰-573.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-488.6KB/s(Youtube:不良林)
+      - 波兰-663.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 波兰-573.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-488.6KB/s(Youtube:不良林)
+      - 波兰-663.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 波兰-573.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-488.6KB/s(Youtube:不良林)
+      - 波兰-663.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
