--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 未知国家-3.35MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
   - {name: 🇷🇺 俄罗斯联邦-313.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 🇯🇵 日本-5.21MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-247.9KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-557.0KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇫🇷 法国-2.83MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 未知国家-2.58MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
-  - {name: 🇺🇸 美国-4.24MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-437.4KB/s(Youtube:不良林), server: holidays.starspace.link, port: 443, type: trojan, password: XCPKaaV8I1rmb7Ai, sni: holidays.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-394.9KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.57MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
+  - {name: 波兰-842.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 波兰-970.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 波兰-733.7KB/s(Youtube:不良林), server: 217.30.10.64, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
+  - {name: 🇯🇵 日本-18.38MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 未知国家-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-313.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 未知国家-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇮🇳 印度-394.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 波兰-842.6KB/s(Youtube:不良林)
+      - 波兰-970.9KB/s(Youtube:不良林)
+      - 波兰-733.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 未知国家-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-313.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 未知国家-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇮🇳 印度-394.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 波兰-842.6KB/s(Youtube:不良林)
+      - 波兰-970.9KB/s(Youtube:不良林)
+      - 波兰-733.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 未知国家-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-313.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 未知国家-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇮🇳 印度-394.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 波兰-842.6KB/s(Youtube:不良林)
+      - 波兰-970.9KB/s(Youtube:不良林)
+      - 波兰-733.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 未知国家-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-313.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 未知国家-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇮🇳 印度-394.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 波兰-842.6KB/s(Youtube:不良林)
+      - 波兰-970.9KB/s(Youtube:不良林)
+      - 波兰-733.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 未知国家-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-313.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 未知国家-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇮🇳 印度-394.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 波兰-842.6KB/s(Youtube:不良林)
+      - 波兰-970.9KB/s(Youtube:不良林)
+      - 波兰-733.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 未知国家-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-313.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 未知国家-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇮🇳 印度-394.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 波兰-842.6KB/s(Youtube:不良林)
+      - 波兰-970.9KB/s(Youtube:不良林)
+      - 波兰-733.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 未知国家-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-313.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 未知国家-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇮🇳 印度-394.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 波兰-842.6KB/s(Youtube:不良林)
+      - 波兰-970.9KB/s(Youtube:不良林)
+      - 波兰-733.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
